--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>NFT Duel Game</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <style>
-        body { font-family: Arial; text-align: center; padding: 20px; }
-        button { padding: 10px 20px; margin: 5px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Casino WebApp</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>NFT Duel Game</h1>
-    <button onclick="startGame('start_duel')">Начать дуэль</button>
-    <button onclick="startGame('start_rps')">Камень-Ножницы-Бумага</button>
-    <button onclick="startGame('start_hot_potato')">Горячая Картошка</button>
-    <button onclick="startGame('start_dice')">Кости</button>
-    <button onclick="startGame('start_slots')">Слоты</button>
-    <button onclick="startGame('start_wheel')">Колесо Фортуны</button>
-    <script>
-        Telegram.WebApp.ready();
-        Telegram.WebApp.expand();
+  <main>
+    <!-- Верхний бар -->
+    <header>
+      <div class="logo">🎰 Casino</div>
+      <div class="balance">💎 12.5 TON</div>
+    </header>
 
-        const user = Telegram.WebApp.initDataUnsafe.user;
-        const userId = user ? user.id : null;
+    <!-- Игровая зона -->
+    <section class="wheel-section">
+      <div class="wheel-container">
+        <div id="wheel" class="wheel"></div>
+      </div>
+      <button id="spinBtn" class="btn primary">Поставить NFT и крутить</button>
+      <div class="timer">00:30</div>
+    </section>
 
-        function startGame(action) {
-            if (userId) {
-                Telegram.WebApp.sendData(JSON.stringify({ action: action, user_id: userId }));
-                Telegram.WebApp.close();
-            }
-        }
-    </script>
+    <!-- Нижнее меню -->
+    <nav class="bottom-nav">
+      <button class="nav-btn active">🎲 Rolls</button>
+      <button class="nav-btn">🎁 Мои гифты</button>
+      <button class="nav-btn">🛒 Магазин</button>
+      <button class="nav-btn">💰 Заработок</button>
+    </nav>
+  </main>
+
+  <!-- TON Connect -->
+  <button id="tonConnectBtn" class="btn secondary ton-btn">TON Connect</button>
+
+  <script src="app.js"></script>
 </body>
 </html>
