--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-const POMO_SECONDS = 25 * 60;
+const POMO_SECONDS = 5;
 let remaining = POMO_SECONDS;
 let intervalId = null;
 let isRunning = false;
