--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-const POMO_SECONDS = 5;
-let remaining = POMO_SECONDS;
-let intervalId = null;
-let isRunning = false;
-
-const timerDisplay = document.getElementById("timerDisplay");
-const startBtn = document.getElementById("startBtn");
-const pauseBtn = document.getElementById("pauseBtn");
-const resetBtn = document.getElementById("resetBtn");
-const statusText = document.getElementById("statusText");
-
-// берём habit_id из URL: ...?habit_id=1
-const urlParams = new URLSearchParams(window.location.search);
-const habitId = urlParams.get("habit_id") || null;
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -99,7 +84,7 @@ const habitId = urlParams.get("habit_id") || null;
   </div>
 
   <script>
-    const POMO_SECONDS = 25 * 60;
+    const POMO_SECONDS = 5;
     let remaining = POMO_SECONDS;
     let intervalId = null;
     let isRunning = false;
@@ -110,7 +95,7 @@ const habitId = urlParams.get("habit_id") || null;
     const resetBtn = document.getElementById("resetBtn");
     const statusText = document.getElementById("statusText");
 
-    // habit_id можно будет передавать через параметр в URL или initData
+    // берём habit_id из URL: ...?habit_id=1
     const urlParams = new URLSearchParams(window.location.search);
     const habitId = urlParams.get("habit_id") || null;
 
@@ -133,7 +118,7 @@ const habitId = urlParams.get("habit_id") || null;
         finished_at: new Date().toISOString()
       };
       Telegram.WebApp.sendData(JSON.stringify(payload));
-      Telegram.WebApp.close(); // сворачиваем мини‑приложение
+      Telegram.WebApp.close();
     }
 
     function tick() {
@@ -178,4 +163,3 @@ const habitId = urlParams.get("habit_id") || null;
   </script>
 </body>
 </html>
-
