--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
   </div>
 
   <script>
+    if (window.Telegram && window.Telegram.WebApp) {
+  Telegram.WebApp.expand();
+}
+
     // длительность текущей сессии в секундах
     let pomoSeconds = 25 * 60;
     let remaining = pomoSeconds;
