--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   Telegram.WebApp.expand();
 }
     // длительность текущей сессии в секундах
-    let pomoSeconds = 25 * 60;
+    let pomoSeconds = 5;
     let remaining = pomoSeconds;
     let intervalId = null;
     let isRunning = false;
